tests/typing/should_fail/overload.java
package tutu.titi.toto;

class A {
	public int method1(int a) {
		return 1;
	}

	public int method1(int b) {
		return 2;
	}
}
